--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,28 @@
 }
 
 .header {
+  position: relative;
   display: flex;
-  /* position: fixed; */
   justify-content: space-between;
   align-items: center;
-  padding: 3rem 4.8rem;
-  margin-bottom: 12rem;
+  height: 8rem;
+  padding: 0 4.8rem;
+  transition: all 0.3s;
+  margin-bottom: 4rem;
+}
+
+/* STICKY NAVIGATION */
+/* ----------------- */
+.sticky .header {
+  position: sticky;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  /* padding-top: 0;
+  padding-bottom: 0; */
+  z-index: 999;
+  background-color: rgba(23, 23, 23, 0.75);
 }
 
 .main-nav-list {
@@ -210,6 +226,7 @@
 .percentage {
   display: block;
   height: 100%;
+  width: 0%;
   background: linear-gradient(
     45deg,
     #f72585,
@@ -225,15 +242,8 @@
   );
 
   border-radius: 5px;
-  animation: progress 1500ms ease-in 1;
+  transition: all 3s;
 }
-
-/* background-color: rgba(
-    72,
-    150,
-    239,
-    0.6
-  ); poner un gradient con la paleta de la pagina */
 
 .p-organized {
   width: 98%;
@@ -259,12 +269,6 @@
   width: 95%;
 }
 
-/* Animating the progress bar by initially starting from 0*/
-@keyframes progress {
-  from {
-    width: 0;
-  }
-}
 /* ----------------------------- */
 
 .language-skills-details {
@@ -294,10 +298,16 @@
 
 .timeline {
   display: grid;
-  grid-template-columns: 3fr 1fr 3fr;
+  grid-template-columns: 1fr auto 1fr;
 }
 
 /* ------------ */
+
+.timeline-component {
+  display: flex;
+  justify-content: right;
+  gap: 1rem;
+}
 
 .timeline-item {
   display: flex;
@@ -310,6 +320,12 @@
 
 .timeline-item:last-child {
   margin-bottom: 0;
+}
+
+.timeline-connection {
+  border-top: 1px solid #fff;
+  width: 7.4rem;
+  margin-top: 1rem;
 }
 
 .timeline-item-date {
@@ -335,19 +351,10 @@
   text-align: right;
 }
 
-.timeline-connection {
-  border-bottom: 1px solid #fff;
-  width: 7.4rem;
-  position: absolute;
-  top: 0.8rem;
-  transform: translateX(9rem);
-}
-
 /* ------------ */
 
 .timeline-bar {
   border-left: 1px solid #fff;
-  /* width: 50%; */
   justify-self: center;
   transform: translateX(1.2rem);
 }
@@ -363,34 +370,32 @@
 
 /*  GRID Timeline Settings  */
 /* ------------------------ */
-.timeline-left .timeline-blank {
+.timeline-right .timeline-blank {
   grid-row: 1;
   grid-column: 1;
 }
 
-.timeline-left .timeline-bar {
+.timeline-right .timeline-bar {
   grid-row: 1;
   grid-column: 2;
 }
 
-.timeline-item-left {
+.timeline-item-right {
   grid-column: 3;
 }
 
 /*  FLEX Timeline Settings  */
 /* ------------------------ */
 
-.timeline-left .timeline-connection {
-  width: 7.4rem;
-  position: absolute;
-  top: 0.8rem;
-  transform: translateX(-9rem);
+.timeline-right .timeline-component {
+  flex-direction: row-reverse;
+  justify-content: left;
 }
 
-.timeline-item-left {
+.timeline-item-right {
   align-items: flex-start;
 }
-.timeline-item-left .timeline-item-business-card {
+.timeline-item-right .timeline-item-business-card {
   text-align: left;
 }
 
@@ -457,7 +462,7 @@
 
 .extra-activity-img {
   background-color: #272727;
-  height: 20rem;
+  height: 16rem;
   text-align: center;
   padding: 2rem 4rem;
   border-radius: 1rem;
@@ -466,7 +471,7 @@
 .extra-activity-img img {
   height: 100%;
   opacity: 50%;
-  filter: grayscale(100%);
+  filter: grayscale(75%);
   transition: all 0.3s;
 }
 
@@ -504,7 +509,7 @@
 }
 
 .hobbie-item-icon {
-  background-color: rgba(76, 202, 240, 0.85);
+  background-color: rgba(76, 202, 240, 0.6);
   /* opacity: 80%; */
   text-align: center;
   padding: 3rem 3rem;
@@ -557,6 +562,7 @@
   display: block;
   width: 30%;
   height: 10%;
+  margin: 2rem 0;
 }
 
 .contact-me-links {
@@ -631,6 +637,7 @@
 
 footer {
   background-color: rgba(115, 9, 185, 0.25);
+  margin-top: 9.6rem;
 }
 
 .logo-footer {
