--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,11 @@
   display: inline-block;
 }
 
+.about-me-txt-detail {
+  text-align: left;
+  padding: 0 2rem;
+}
+
 /* *************************************** */
 /* SKILLS */
 /* *************************************** */
@@ -316,16 +321,29 @@
   margin-bottom: 3.2rem;
   align-items: flex-end;
   position: relative;
+  border: 1px solid #161617;
+  border-radius: 1rem;
+  transition: all 0.6s;
+  padding: 0.5rem;
 }
 
 .timeline-item:last-child {
   margin-bottom: 0;
 }
 
+.timeline-item:hover {
+  border: 1px solid rgba(247, 37, 132, 0.9);
+}
+
+.timeline-item:hover + .timeline-connection {
+  border-top: 1px solid rgba(247, 37, 132, 0.9);
+}
+
 .timeline-connection {
-  border-top: 1px solid #fff;
-  width: 7.4rem;
+  width: 15%;
   margin-top: 1rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  transition: all 0.6s;
 }
 
 .timeline-item-date {
@@ -345,7 +363,6 @@
 
 .timeline-item-business-card {
   background-color: #272727;
-  /* width: 90%; */
   padding: 2rem;
   border-radius: 1rem;
   text-align: right;
@@ -366,6 +383,7 @@
   width: 2.4rem;
   height: 2.4rem;
   transform: translateX(-50%);
+  transition: all 0.3s;
 }
 
 /*  GRID Timeline Settings  */
@@ -438,6 +456,13 @@
   font-style: italic;
 }
 
+.education-card-details {
+  /* font-style: italic; */
+  background-color: #272727;
+  padding: 2rem 2rem;
+  border-radius: 1rem;
+}
+
 /* *************************************** */
 /* EXTRA ACTIVITIES */
 /* *************************************** */
@@ -462,7 +487,7 @@
 
 .extra-activity-img {
   background-color: #272727;
-  height: 16rem;
+  height: 19rem;
   text-align: center;
   padding: 2rem 4rem;
   border-radius: 1rem;
@@ -471,7 +496,7 @@
 .extra-activity-img img {
   height: 100%;
   opacity: 50%;
-  filter: grayscale(75%);
+  filter: grayscale(30%);
   transition: all 0.3s;
 }
 
@@ -556,6 +581,9 @@
 .contact-me-quote {
   font-size: 1.4rem;
   font-style: italic;
+  text-align: center;
+  line-height: 1.5;
+  padding: 0 2rem;
 }
 
 .contact-me-sign {
@@ -568,16 +596,15 @@
 .contact-me-links {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* justify-items: center; */
   row-gap: 4rem;
   column-gap: 8rem;
   background-color: rgba(22, 22, 23, 0.516);
   padding: 2.4rem 3.2rem;
   border-radius: 1rem;
+  margin-top: 4rem;
 }
 
 .contact-me-data-title {
-  color: #4361ee;
   font-weight: 500;
   margin-bottom: 1rem;
 }
