--- a/css/style.css
+++ b/css/style.css
@@ -13,25 +13,31 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 8rem;
+  height: 9.6rem;
   padding: 0 4.8rem;
-  transition: all 0.3s;
-  margin-bottom: 4rem;
+  /* transition: all 0.3s; */
+  /* margin-bottom: 4rem; */
 }
 
 /* STICKY NAVIGATION */
 /* ----------------- */
 .sticky .header {
-  position: sticky;
+  position: fixed;
   top: 0;
   bottom: 0;
   width: 100%;
   height: 8rem;
-  /* padding-top: 0;
-  padding-bottom: 0; */
+  padding-top: 0;
+  padding-bottom: 0;
   z-index: 999;
   background-color: rgba(23, 23, 23, 0.75);
 }
+
+.sticky .section-about-me {
+  margin-top: 9.6rem;
+}
+
+/* ----------------- */
 
 .main-nav-list {
   display: flex;
@@ -74,6 +80,24 @@
   background-color: #b5179e;
 }
 
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #4361ee;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 /* +++++++++++++++++++++++++++++++++++++++ */
 /* *************************************** */
 /* M A I N */
@@ -101,7 +125,6 @@
       rgba(72, 12, 168, 0.305)
     ),
     url(../img/gf3.jpeg);
-  /* background-image: url(../img/gf3.jpeg); */
   background-size: cover;
   background-position: center;
   border-radius: 2rem;
@@ -113,6 +136,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 4rem;
+  text-align: center;
 }
 
 .about-me-name {
@@ -325,6 +349,7 @@
   border-radius: 1rem;
   transition: all 0.6s;
   padding: 0.5rem;
+  text-align: right;
 }
 
 .timeline-item:last-child {
@@ -365,7 +390,6 @@
   background-color: #272727;
   padding: 2rem;
   border-radius: 1rem;
-  text-align: right;
 }
 
 /* ------------ */
@@ -400,6 +424,7 @@
 
 .timeline-item-right {
   grid-column: 3;
+  text-align: left;
 }
 
 /*  FLEX Timeline Settings  */
@@ -412,9 +437,6 @@
 
 .timeline-item-right {
   align-items: flex-start;
-}
-.timeline-item-right .timeline-item-business-card {
-  text-align: left;
 }
 
 /* *************************************** */
@@ -430,6 +452,7 @@
 .education-item {
   display: grid;
   grid-template-columns: 1fr 10fr;
+  column-gap: 1rem;
 }
 
 .education-card {
@@ -560,7 +583,7 @@
 /* CONTACT ME (CTA) */
 /* *************************************** */
 
-.container-contact-me {
+.contact-me-card {
   background-color: #272727;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -576,19 +599,20 @@
   align-items: center;
   gap: 1.6rem;
   padding: 3.2rem 0;
+  text-align: center;
 }
 
 .contact-me-quote {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-style: italic;
   text-align: center;
   line-height: 1.5;
-  padding: 0 2rem;
+  padding: 0 4rem;
 }
 
 .contact-me-sign {
   display: block;
-  width: 30%;
+  width: 40%;
   height: 10%;
   margin: 2rem 0;
 }
@@ -597,7 +621,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   row-gap: 4rem;
-  column-gap: 8rem;
+  column-gap: 4rem;
   background-color: rgba(22, 22, 23, 0.516);
   padding: 2.4rem 3.2rem;
   border-radius: 1rem;
@@ -673,8 +697,8 @@ footer {
 
 .container-footer {
   display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
-  padding: 4.8rem 0;
+  grid-template-columns: 2fr 0.5fr 2fr;
+  padding: 4.8rem 3.2rem;
 }
 
 /* -------- */
@@ -707,9 +731,7 @@ footer {
 
 .footer-vertical-line {
   border-right: 1px solid #fff;
-  width: 1rem;
   justify-self: center;
-  /* height: 100%; */
 }
 
 /* -------- */
